// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > basic.dbml 1`] = `
{
  "entities": [
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "email",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "created_at",
          "pk": false,
          "type": "timestamp",
        },
      ],
      "name": "users",
    },
  ],
  "hints": {
    "clusters": [],
    "pins": [],
    "ranks": [],
  },
  "refs": [],
}
`;

exports[`fixtures > blog.dbml 1`] = `
{
  "entities": [
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "email",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "created_at",
          "pk": false,
          "type": "timestamp",
        },
      ],
      "name": "users",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "title",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "body",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "posts",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "post_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "body",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "comments",
    },
  ],
  "hints": {
    "clusters": [],
    "pins": [],
    "ranks": [],
  },
  "refs": [
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "user_id",
        "entity": "posts",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "post_id",
        "entity": "comments",
      },
      "parent": {
        "column": "id",
        "entity": "posts",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "user_id",
        "entity": "comments",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
  ],
}
`;

exports[`fixtures > cardinalities.dbml 1`] = `
{
  "entities": [
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
      ],
      "name": "users",
    },
    {
      "columns": [
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
      ],
      "name": "profiles",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
      ],
      "name": "posts",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
      ],
      "name": "tags",
    },
    {
      "columns": [
        {
          "name": "post_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "tag_id",
          "pk": false,
          "type": "int",
        },
      ],
      "name": "post_tags",
    },
  ],
  "hints": {
    "clusters": [],
    "pins": [],
    "ranks": [],
  },
  "refs": [
    {
      "cardinality": "one-to-one",
      "child": {
        "column": "user_id",
        "entity": "profiles",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "user_id",
        "entity": "posts",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
    {
      "cardinality": "many-to-many",
      "child": {
        "column": "post_id",
        "entity": "post_tags",
      },
      "parent": {
        "column": "id",
        "entity": "posts",
      },
    },
    {
      "cardinality": "many-to-many",
      "child": {
        "column": "tag_id",
        "entity": "post_tags",
      },
      "parent": {
        "column": "id",
        "entity": "tags",
      },
    },
  ],
}
`;

exports[`fixtures > ecommerce.dbml 1`] = `
{
  "entities": [
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "email",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "created_at",
          "pk": false,
          "type": "timestamp",
        },
      ],
      "name": "users",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "sku",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "price",
          "pk": false,
          "type": "int",
        },
        {
          "name": "stock",
          "pk": false,
          "type": "int",
        },
      ],
      "name": "products",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "slug",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "categories",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "street",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "city",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "country",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "addresses",
    },
    {
      "columns": [
        {
          "name": "product_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "category_id",
          "pk": false,
          "type": "int",
        },
      ],
      "name": "product_categories",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "status",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "total",
          "pk": false,
          "type": "int",
        },
        {
          "name": "created_at",
          "pk": false,
          "type": "timestamp",
        },
      ],
      "name": "orders",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "product_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "rating",
          "pk": false,
          "type": "int",
        },
        {
          "name": "body",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "reviews",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "order_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "product_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "quantity",
          "pk": false,
          "type": "int",
        },
        {
          "name": "unit_price",
          "pk": false,
          "type": "int",
        },
      ],
      "name": "order_items",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "order_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "amount",
          "pk": false,
          "type": "int",
        },
        {
          "name": "method",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "payments",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "order_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "address_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "tracking_no",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "status",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "shipments",
    },
  ],
  "hints": {
    "clusters": [],
    "pins": [],
    "ranks": [],
  },
  "refs": [
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "user_id",
        "entity": "addresses",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "product_id",
        "entity": "product_categories",
      },
      "parent": {
        "column": "id",
        "entity": "products",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "category_id",
        "entity": "product_categories",
      },
      "parent": {
        "column": "id",
        "entity": "categories",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "user_id",
        "entity": "orders",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "user_id",
        "entity": "reviews",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "product_id",
        "entity": "reviews",
      },
      "parent": {
        "column": "id",
        "entity": "products",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "order_id",
        "entity": "order_items",
      },
      "parent": {
        "column": "id",
        "entity": "orders",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "product_id",
        "entity": "order_items",
      },
      "parent": {
        "column": "id",
        "entity": "products",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "order_id",
        "entity": "payments",
      },
      "parent": {
        "column": "id",
        "entity": "orders",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "user_id",
        "entity": "payments",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "order_id",
        "entity": "shipments",
      },
      "parent": {
        "column": "id",
        "entity": "orders",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "address_id",
        "entity": "shipments",
      },
      "parent": {
        "column": "id",
        "entity": "addresses",
      },
    },
  ],
}
`;

exports[`fixtures > library.dbml 1`] = `
{
  "entities": [
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "author",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "country",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "publisher",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "category",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "title",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "isbn",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "author_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "publisher_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "year",
          "pk": false,
          "type": "int",
        },
        {
          "name": "pages",
          "pk": false,
          "type": "int",
        },
        {
          "name": "language",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "cover_url",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "price",
          "pk": false,
          "type": "int",
        },
        {
          "name": "available",
          "pk": false,
          "type": "boolean",
        },
        {
          "name": "description",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "book",
    },
    {
      "columns": [
        {
          "name": "book_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "category_id",
          "pk": false,
          "type": "int",
        },
      ],
      "name": "book_category",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "email",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "joined_at",
          "pk": false,
          "type": "timestamp",
        },
      ],
      "name": "users",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "book_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "borrowed_at",
          "pk": false,
          "type": "timestamp",
        },
        {
          "name": "returned_at",
          "pk": false,
          "type": "timestamp",
        },
      ],
      "name": "borrowing",
    },
  ],
  "hints": {
    "clusters": [],
    "pins": [],
    "ranks": [],
  },
  "refs": [
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "author_id",
        "entity": "book",
      },
      "parent": {
        "column": "id",
        "entity": "author",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "publisher_id",
        "entity": "book",
      },
      "parent": {
        "column": "id",
        "entity": "publisher",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "book_id",
        "entity": "book_category",
      },
      "parent": {
        "column": "id",
        "entity": "book",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "category_id",
        "entity": "book_category",
      },
      "parent": {
        "column": "id",
        "entity": "category",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "user_id",
        "entity": "borrowing",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "book_id",
        "entity": "borrowing",
      },
      "parent": {
        "column": "id",
        "entity": "book",
      },
    },
  ],
}
`;

exports[`fixtures > many-to-many.dbml 1`] = `
{
  "entities": [
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "users",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "groups",
    },
    {
      "columns": [
        {
          "name": "user_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "group_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "role",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "memberships",
    },
  ],
  "hints": {
    "clusters": [],
    "pins": [],
    "ranks": [],
  },
  "refs": [
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "user_id",
        "entity": "memberships",
      },
      "parent": {
        "column": "id",
        "entity": "users",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "group_id",
        "entity": "memberships",
      },
      "parent": {
        "column": "id",
        "entity": "groups",
      },
    },
  ],
}
`;

exports[`fixtures > sales_star.dbml 1`] = `
{
  "entities": [
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "date",
          "pk": false,
          "type": "date",
        },
        {
          "name": "day_of_week",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "month",
          "pk": false,
          "type": "int",
        },
        {
          "name": "quarter",
          "pk": false,
          "type": "int",
        },
        {
          "name": "year",
          "pk": false,
          "type": "int",
        },
      ],
      "name": "date_dim",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "sku",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "category",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "brand",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "unit_price",
          "pk": false,
          "type": "decimal",
        },
      ],
      "name": "product_dim",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "address",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "city",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "region",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "store_dim",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "email",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "name",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "city",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "segment",
          "pk": false,
          "type": "varchar",
        },
      ],
      "name": "customer_dim",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "code",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "description",
          "pk": false,
          "type": "varchar",
        },
        {
          "name": "discount_pct",
          "pk": false,
          "type": "int",
        },
      ],
      "name": "promotion_dim",
    },
    {
      "columns": [
        {
          "name": "id",
          "pk": true,
          "type": "int",
        },
        {
          "name": "date_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "product_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "store_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "customer_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "promotion_id",
          "pk": false,
          "type": "int",
        },
        {
          "name": "quantity",
          "pk": false,
          "type": "int",
        },
        {
          "name": "unit_price",
          "pk": false,
          "type": "decimal",
        },
        {
          "name": "total",
          "pk": false,
          "type": "decimal",
        },
      ],
      "name": "sales_fact",
    },
  ],
  "hints": {
    "clusters": [],
    "pins": [],
    "ranks": [],
  },
  "refs": [
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "date_id",
        "entity": "sales_fact",
      },
      "parent": {
        "column": "id",
        "entity": "date_dim",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "product_id",
        "entity": "sales_fact",
      },
      "parent": {
        "column": "id",
        "entity": "product_dim",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "store_id",
        "entity": "sales_fact",
      },
      "parent": {
        "column": "id",
        "entity": "store_dim",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "customer_id",
        "entity": "sales_fact",
      },
      "parent": {
        "column": "id",
        "entity": "customer_dim",
      },
    },
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "promotion_id",
        "entity": "sales_fact",
      },
      "parent": {
        "column": "id",
        "entity": "promotion_dim",
      },
    },
  ],
}
`;
